--- a/index.html
+++ b/index.html
@@ -115,34 +115,16 @@
       width: 20px;
     }
 
-    .first {
-      background: #1e90ff;
-      align: left;
-    }
-
-    .second {
-      background: #69a2fb;
-    }
-
-    .third {
-      background: #90b3f7;
-    }
-
-    .forth {
-      background: #b0c6f4;
-    }
-
-    .fifth {
-      background: #cdd9f1;
-    }
-
-    .sixth {
-      background: #e7edf1;
-    }
-
-    .seventh {
-      background: #ffffff;
-    }
+    .first { background: #EC6967; align:left;}
+    .second{ background: #F4B1B2;}
+    .third { background: #F4B1B2;}
+    .forth { background: #FED19B;}
+    .fifth { background: #78BD70;}
+    .sixth { background: #C9E8AC;}
+    .seventh { background: #69A2CB;}
+    .eighth { background: #C0DCE8;}
+    .ninth { background: #987284;}
+    .tenth { background: #D8C8E0;}
 
     .happiness {
       margin: 0;
@@ -323,26 +305,29 @@
     <!-- create div for color legend -->
     <div id="legend">
       <div class="legend1">
-        <p class="happiness"><span class="key-dot first"></span>Highest</p>
+        <p class="happiness"><span class="key-dot first"></span>Shape of You</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot second"></span></p>
+        <p class="happiness"><span class="key-dot second"></span>Despacito - Remix</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot third"></span></p>
+        <p class="happiness"><span class="key-dot third"></span>Despacito (Featuring Daddy Yankee)</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot forth"></span></p>
+        <p class="happiness"><span class="key-dot forth"></span>Rockstar</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot fifth"></span></p>
+        <p class="happiness"><span class="key-dot fifth"></span>Mi Gente</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot sixth"></span></p>
+        <p class="happiness"><span class="key-dot sixth"></span>Felices los 4</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot seventh"></span>Lowest</p>
+        <p class="happiness"><span class="key-dot seventh"></span>Look What You Made Me Do</p>
       </div>
+      <div class="legend1"> <p class="happiness"><span class="key-dot eighth"></span>Criminal</p> </div>
+    <div class="legend1"> <p class="happiness"><span class="key-dot ninth"></span>Something Just Like This</p> </div>
+    <div class="legend1"> <p class="happiness"><span class="key-dot tenth"></span>Me RehÃºso</p> </div>
     </div>
 
     <div id="map"></div>
