fixed repeat color

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     .first { background: #EC6967; align:left;}
     .second{ background: #F4B1B2;}
-    .third { background: #F4B1B2;}
+    .third { background: #FFA764;}
     .forth { background: #FED19B;}
     .fifth { background: #78BD70;}
     .sixth { background: #C9E8AC;}
