--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
       // Give the tooltip a country label
       let country = d3.select(this);
-      tooltip.append("div").text(idToCountry[country.attr("ident")]);
+      //tooltip.append("div").text(idToCountry[country.attr("ident")]);
 
       // Show the tooltip!
       tooltip.style("opacity",1);
