legend not cut off anymore

--- a/index.html
+++ b/index.html
@@ -329,8 +329,7 @@
   </div>
 
   <div id="mapContainer">
-    <p class="date"></p>
-    <div id="map"></div>
+    <div id="map"><p class="date"></p></div>
     <div id="mapText">
       <h2>
         spotify
