--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     .ninth { background: #987284;}
     .tenth { background: #D8C8E0;}
 
-    .happiness {
+    .topSongs {
       margin: 0;
       text-align: left;
       border: 0;
@@ -186,62 +186,6 @@
       max-width: 1300;
     }
 
-
-
-    #plot1 {
-      margin: 20px;
-      flex-grow: 1;
-    }
-
-    #plot2 {
-      margin: 20px;
-      flex-grow: 1;
-    }
-
-    #plot2 p {
-      margin-bottom: 45px;
-    }
-
-    #averageDonut {
-      margin-top: 40px;
-      padding: 5%;
-      position: relative;
-      float: left;
-
-    }
-
-    .donutGraphs {
-      padding: 20%;
-      padding-top: 0px;
-      align-content: right;
-      position: absolute;
-      max-width: 100%;
-      margin-left: 5%;
-      margin-right: 5%;
-      /* margin-left: 50px; */
-    }
-
-    #colorLegendPie {
-      width: 200px;
-      height: 300px;
-      position: relative;
-      float: right;
-      margin-left: 100px;
-      margin-top: 20px;
-    }
-
-    #colorBox {
-      width: 20px;
-      height: 20px;
-      position: relative;
-      float: left;
-    }
-
-    p#colorlabel {
-      position: relative;
-      float: right;
-    }
-
     .overrideText {
       text-align: left;
       font-size: 1em;
@@ -260,35 +204,6 @@
       max-width: 100%;
       padding-left: 100px;
       margin-bottom: 10%;
-    }
-
-    #Norway,
-    #Jamaica,
-    #Burundi {
-      width: 33%;
-      align-content: center;
-      margin-top: 5%;
-    }
-
-    #plot3 p {
-      padding-left: 5%;
-      padding-right: 10%;
-      margin-bottom: 0;
-      padding-bottom: 0;
-    }
-
-    #plot1 {
-      margin: 20px;
-      flex-grow: 1;
-    }
-
-    #plot2 {
-      margin: 20px;
-      flex-grow: 1;
-    }
-
-    #plot2 p {
-      margin-bottom: 45px;
     }
 
 
@@ -326,29 +241,29 @@
     <!-- create div for color legend -->
     <div id="legend">
       <div class="legend1">
-        <p class="happiness"><span class="key-dot first"></span>Shape of You</p>
+        <p class="topSongs"><span class="key-dot first"></span>Shape of You</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot second"></span>Despacito</p>
+        <p class="topSongs"><span class="key-dot second"></span>Despacito</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot third"></span>Starboy</p>
+        <p class="topSongs"><span class="key-dot third"></span>Starboy</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot forth"></span>Rockstar</p>
+        <p class="topSongs"><span class="key-dot forth"></span>Rockstar</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot fifth"></span>Mi Gente</p>
+        <p class="topSongs"><span class="key-dot fifth"></span>Mi Gente</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot sixth"></span>Felices los 4</p>
+        <p class="topSongs"><span class="key-dot sixth"></span>Felices los 4</p>
       </div>
       <div class="legend1">
-        <p class="happiness"><span class="key-dot seventh"></span>Look What You Made Me Do</p>
+        <p class="topSongs"><span class="key-dot seventh"></span>Look What You Made Me Do</p>
       </div>
-      <div class="legend1"> <p class="happiness"><span class="key-dot eighth"></span>Criminal</p> </div>
-    <div class="legend1"> <p class="happiness"><span class="key-dot ninth"></span>Something Just Like This</p> </div>
-    <div class="legend1"> <p class="happiness"><span class="key-dot tenth"></span>Me Rehúso</p> </div>
+      <div class="legend1"> <p class="topSongs"><span class="key-dot eighth"></span>Criminal</p> </div>
+    <div class="legend1"> <p class="topSongs"><span class="key-dot ninth"></span>Something Just Like This</p> </div>
+    <div class="legend1"> <p class="topSongs"><span class="key-dot tenth"></span>Me Rehúso</p> </div>
     </div>
 
     <div id="map"></div>
