--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 <body>
 
   <div id='Intro'>
-    <h1>Spotify</h1>
-    <h2>Spotify</h2>
+    <h1>Spotify's Top Song by Country</h1>
+    <h2>From January 1 2017 to January 4 2018</h2>
   </div>
 
   <div id="mapContainer">
@@ -239,6 +239,9 @@
     </div>
     <!-- create div for color legend -->
     <div id="legend">
+        <div class="legend1">
+            <p class="topSongs"><span class="key-dot"></span><b>Top 10 Songs of 2017</b></p>
+          </div>
       <div class="legend1">
         <p class="topSongs"><span class="key-dot first"></span>Shape of You</p>
       </div>
