--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <body>
 
   <div id='Intro'>
-    <h1>Spotify's Top Song by Country</h1>
+    <h1>Spotify's Top Songs by Country</h1>
     <h2>From January 1 2017 to January 4 2018</h2>
   </div>
 
