--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ input[type=range]:focus::-ms-fill-upper {
       //   });
       // });
 
-console.log(stateCounts);
+// console.log(stateCounts);
       // PROMISE FOR COUNTRIES AND FILL
       d3.json("combined2.json").then(function (world) {
         const changeCountryColor = (sliderValue) => {
