padding to legend title

--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@ input[type=range]:focus::-ms-fill-upper {
       color: white;
     }
 
+    #legend .title {
+      margin-bottom: 4%;
+    }
+
 
     .key-dot {
       display: inline-block;
@@ -332,33 +336,33 @@ input[type=range]:focus::-ms-fill-upper {
     </div>
     <!-- create div for color legend -->
     <div id="legend">
-        <div class="legend1">
-            <p class="topSongs"><span class="key-dot"></span><b>Top 10 Songs of 2017</b></p>
-          </div>
-      <div class="legend1">
+      <div class="title">
+        <p class="topSongs"><span class="key-dot"></span><b>Top 10 Songs of 2017</b></p>
+      </div>
+      <div>
         <p class="topSongs"><span class="key-dot first"></span>Shape of You</p>
       </div>
-      <div class="legend1">
+      <div>
         <p class="topSongs"><span class="key-dot second"></span>Despacito</p>
       </div>
-      <div class="legend1">
+      <div>
         <p class="topSongs"><span class="key-dot third"></span>Starboy</p>
       </div>
-      <div class="legend1">
+      <div>
         <p class="topSongs"><span class="key-dot forth"></span>Rockstar</p>
       </div>
-      <div class="legend1">
+      <div>
         <p class="topSongs"><span class="key-dot fifth"></span>Mi Gente</p>
       </div>
-      <div class="legend1">
+      <div>
         <p class="topSongs"><span class="key-dot sixth"></span>Felices los 4</p>
       </div>
-      <div class="legend1">
+      <div>
         <p class="topSongs"><span class="key-dot seventh"></span>Look What You Made Me Do</p>
       </div>
-      <div class="legend1"> <p class="topSongs"><span class="key-dot eighth"></span>Criminal</p> </div>
-    <div class="legend1"> <p class="topSongs"><span class="key-dot ninth"></span>Something Just Like This</p> </div>
-    <div class="legend1"> <p class="topSongs"><span class="key-dot tenth"></span>Me Rehúso</p> </div>
+      <div> <p class="topSongs"><span class="key-dot eighth"></span>Criminal</p> </div>
+    <div> <p class="topSongs"><span class="key-dot ninth"></span>Something Just Like This</p> </div>
+    <div> <p class="topSongs"><span class="key-dot tenth"></span>Me Rehúso</p> </div>
     </div>
     <div class='slider-container'>
         <input type="range" min="0" max="364" value="0" class="slider" step='1'>
