--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ input[type=range]:focus::-ms-fill-upper {
     #Intro {
       padding: 1%;
       text-align: center;
+      background-color: rgb(23, 52, 77);
+      color: white;
     }
 
     h1 {
@@ -326,7 +328,7 @@ input[type=range]:focus::-ms-fill-upper {
 
   <div id='Intro'>
     <h1>Spotify's Top Songs by Country</h1>
-    <h2>From January 1 2017 to December 31 2017</h2>
+    <h2>January 1, 2017 — December 31 2017</h2>
   </div>
 
   <div id="mapContainer">
