--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ input[type=range]:focus::-ms-fill-upper {
                 trackName = song.trackName
               }
             })
-            
+
             return trackName
           })
           .style("fill", function (d) {
@@ -586,9 +586,17 @@ input[type=range]:focus::-ms-fill-upper {
       let country = d3.select(this);
       console.log(country);
       const countryName = country.attr('name');
-      const countrySong = country.attr('song');
-      console.log(countrySong);
       tooltip.append("div").text(countryName);
+
+      let song = d3.select(this);
+      console.log(song);
+      const countrySong = song.attr('song');
+      tooltip.append("div").text(countrySong);
+
+      let artist = d3.select(this);
+      console.log(artist);
+      const countryArtist = artist.attr('artist');
+      tooltip.append("div").text(countryArtist);
 
       // Show the tooltip!
       tooltip.style("opacity",1);
