--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ input[type=range]:focus::-ms-fill-upper {
       text-align: center;
       background-color: rgb(23, 52, 77);
       color: white;
+      font-family: Avenir, Arial, Helvetica, sans-serif;
     }
 
     h1 {
@@ -328,7 +329,7 @@ input[type=range]:focus::-ms-fill-upper {
 
   <div id='Intro'>
     <h1>Spotify's Top Songs by Country</h1>
-    <h2>January 1, 2017 — December 31 2017</h2>
+    <h2>January 1, 2017 — December 31, 2017</h2>
   </div>
 
   <div id="mapContainer">
